Atualiza styles.css

--- a/odontoagil/templates/index.html
+++ b/odontoagil/templates/index.html
@@ -1,8 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Bem-vindo ao Sistema OdontoAgil</h1>
-<p>Aqui você pode gerenciar os pacientes, tratamentos e muito mais.</p>
-
-<a href="{% url 'paciente-list' %}">Ver Lista de Pacientes</a>
+<h1>Bem-vindo ao Sistema OdontoÁgil</h1>
 {% endblock %}
