--- a/odontoagil/static/css/styles.css
+++ b/odontoagil/static/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,15 +7,16 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    line-height: 1.6;
+    font-family: 'Barlow', sans-serif;
+    background-color: #f2f2f5;
+    color: #000E13;
+    max-width: 100dvw;
+    min-width: 100dvh;
 }
 
 nav {
-    background-color: #007bff;
-    padding: 10px;
+    background-color: #009AA5;
+    padding: 2%;
 }
 
 nav ul {
@@ -23,7 +26,7 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 0 2%;
 }
 
 nav ul li a {
@@ -37,9 +40,8 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
-/* Estilo para o conteúdo da página */
 .container {
-    max-width: 1200px;
+    max-width: 80%;
     margin: 20px auto;
     padding: 20px;
     background-color: white;
@@ -54,7 +56,7 @@ h1 {
 }
 
 a {
-    color: #007bff;
+    color: #002B3C;
     text-decoration: none;
     font-size: 1.2em;
 }
@@ -76,7 +78,7 @@ table th, table td {
 }
 
 table th {
-    background-color: #007bff;
+    background-color: #002B3C;
     color: white;
 }
 
