--- a/odontoagil/templates/base.html
+++ b/odontoagil/templates/base.html
@@ -11,7 +11,7 @@
 
     <nav>
         <ul>
-            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'index' %}">Início</a></li>
             <li><a href="{% url 'paciente-list' %}">Pacientes</a></li>
         </ul>
     </nav>
