--- a/odontoagil/static/css/styles.css
+++ b/odontoagil/static/css/styles.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --primary-color: #002B3C;
+    --secondary-color: #009AA5;
+    --background-color: #f2f2f5;
+    --text-color: #000E13;
+    --link-color: #002B3C;
+    --table-header-background: #002B3C;
+    --box-shadow-color: rgba(0, 0, 0, 0.1);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,21 +18,22 @@
 
 body {
     font-family: 'Barlow', sans-serif;
-    background-color: #f2f2f5;
-    color: #000E13;
+    background-color: var(--background-color);
+    color: var(--text-color);
     max-width: 100dvw;
     min-width: 100dvh;
 }
 
 nav {
-    background-color: #009AA5;
-    padding: 2%;
+    background-color: var(--primary-color);
+    padding: 2% 4%;
 }
 
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: center;
+    justify-content: left;
+    align-items: center;
 }
 
 nav ul li {
@@ -45,18 +56,18 @@ nav ul li a:hover {
     margin: 20px auto;
     padding: 20px;
     background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px var(--box-shadow-color);
 }
 
 h1 {
-    color: #333;
+    color: var(--text-color);
     font-size: 2.5em;
     text-align: center;
     margin-bottom: 20px;
 }
 
 a {
-    color: #002B3C;
+    color: var(--link-color);
     text-decoration: none;
     font-size: 1.2em;
 }
@@ -78,12 +89,12 @@ table th, table td {
 }
 
 table th {
-    background-color: #002B3C;
+    background-color: var(--secondary-color);
     color: white;
 }
 
 table tr:nth-child(even) {
-    background-color: #f9f9f9;
+    background-color: var(--hover-background-color);
 }
 
 table tr:hover {
