--- a/odontoagil/templates/base.html
+++ b/odontoagil/templates/base.html
@@ -11,6 +11,7 @@
 
     <nav>
         <ul>
+            <img src="../static/img/logo.png" alt="Logotipo" width="10%"/>
             <li><a href="{% url 'index' %}">Início</a></li>
             <li><a href="{% url 'paciente-list' %}">Pacientes</a></li>
         </ul>
