--- a/odontoagil/static/css/estilos.css
+++ b/odontoagil/static/css/estilos.css
@@ -8,6 +8,7 @@
     --link-color: #002B3C;
     --table-header-background: #002B3C;
     --box-shadow-color: rgba(0, 0, 0, 0.1);
+    --hover-background-color: #f9f9f9; 
 }
 
 * {
@@ -26,7 +27,7 @@ body {
 
 nav {
     background-color: var(--primary-color);
-    padding: 2% 4%;
+    padding: 2% 10%;
 }
 
 nav ul {
@@ -52,9 +53,10 @@ nav ul li a:hover {
 }
 
 .container {
+    border-radius: 12px;
     max-width: 80%;
-    margin: 20px auto;
-    padding: 20px;
+    margin: 3% auto;
+    padding: 2% 3%;
     background-color: white;
     box-shadow: 0 4px 8px var(--box-shadow-color);
 }
@@ -62,8 +64,8 @@ nav ul li a:hover {
 h1 {
     color: var(--text-color);
     font-size: 2.5em;
-    text-align: center;
-    margin-bottom: 20px;
+    text-align: left;
+    margin-bottom: 2%;
 }
 
 a {
@@ -72,31 +74,3 @@ a {
     font-size: 1.2em;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
-
-table th, table td {
-    padding: 12px;
-    text-align: left;
-    border: 1px solid #ddd;
-}
-
-table th {
-    background-color: var(--secondary-color);
-    color: white;
-}
-
-table tr:nth-child(even) {
-    background-color: var(--hover-background-color);
-}
-
-table tr:hover {
-    background-color: #f1f1f1;
-}
