--- a/odontoagil/templates/base.html
+++ b/odontoagil/templates/base.html
@@ -5,24 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OdontoÁgil</title>
-    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <link rel="shortcut icon" type="imagex/png" href="{% static 'img/tooth.ico' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block extra_css %}
     {% endblock %}
 </head>
 <body>
 
-    <nav>
-        <ul>
-            <img src="../static/img/logo.png" alt="Logotipo" width="12%"/>
-            <li><a href="{% url 'index' %}">Início</a></li>
-            <li><a href="{% url 'listar_paciente' %}">Pacientes</a></li>
-        </ul>
-    </nav>
+    <header class="cabecalho">
+        <div class="img-logotipo">
+            <img src="../static/img/logo.png" alt="Logotipo" width="100%"/>
+        </div>
+        <nav class="barra-navegacao">
+            <ul>
+                <li class="item-inicio"><img src="../static/img/icons/home.svg" alt="Ícone Home"/><a href="{% url 'index' %}">Início</a></li>
+                <li class="item-paciente"><img src="../static/img/icons/pacient.svg" alt="Ícone Paciente"/><a href="{% url 'listar_paciente' %}">Pacientes</a></li>
+                <li class="item-historia"><img src="../static/img/icons/file.svg" alt="Ícone História Clínica"/><a href="{% url 'listar_paciente' %}">Histórias Clínicas</a></li>
+                <li class="item-tratamento"><img src="../static/img/icons/tooth.svg" alt="Ícone Tratamento"/><a href="{% url 'listar_paciente' %}">Tratamentos</a></li>
+                <li class="item-procedimento"><img src="../static/img/icons/teeth.svg" alt="Ícone Procedimento"/><a href="{% url 'listar_paciente' %}">Procedimentos</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
+    <main class="principal">
+        <div class="conteudo">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </main>
 
 </body>
 </html>
