--- a/odontoagil/templates/base.html
+++ b/odontoagil/templates/base.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="item-inicio"><img src="../static/img/icons/home.svg" alt="Ícone Home"/><a href="{% url 'index' %}">Início</a></li>
                 <li class="item-paciente"><img src="../static/img/icons/pacient.svg" alt="Ícone Paciente"/><a href="{% url 'listar_paciente' %}">Pacientes</a></li>
-                <li class="item-historia"><img src="../static/img/icons/file.svg" alt="Ícone História Clínica"/><a href="{% url 'listar_paciente' %}">Histórias Clínicas</a></li>
+                <li class="item-historia"><img src="../static/img/icons/file.svg" alt="Ícone História Clínica"/><a href="{% url 'historia_clinica' %}">Histórias Clínicas</a></li>
                 <li class="item-tratamento"><img src="../static/img/icons/tooth.svg" alt="Ícone Tratamento"/><a href="{% url 'listar_paciente' %}">Tratamentos</a></li>
                 <li class="item-procedimento"><img src="../static/img/icons/teeth.svg" alt="Ícone Procedimento"/><a href="{% url 'listar_paciente' %}">Procedimentos</a></li>
             </ul>
