--- a/odontoagil/templates/historia_clinica/historia_clinica.html
+++ b/odontoagil/templates/historia_clinica/historia_clinica.html
@@ -3,6 +3,11 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/pacientes/listar_paciente.css' %}">
+<style>
+    .table td.acao-col {
+        min-width: 180px;
+    }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -16,36 +21,30 @@
             <thead>
                 <tr>
                     <th>Nome</th>
-                    <th>Telefone</th>
-                    <th>E-mail</th>
-                    <th>CPF</th>
-                    <th>História Clínica</th>
-                    <th>Ações</th>
+                    <th>Motivo</th>
+                    <th>Diagnóstico</th>
+                    <th>Tratamento</th>
+                    <th>Recomendações</th>
+                    <th class="acao-col">Ações</th>
                 </tr>
             </thead>
             <tbody>
                 {% for paciente in pacientes %}
                 <tr>
                     <td>{{ paciente.nome_completo }}</td>
-                    <td>{{ paciente.telefone }}</td>
-                    <td>{{ paciente.email }}</td>
-                    <td>{{ paciente.cpf }}</td>
-                    <td>
-                        {% if paciente.historia_clinica %}
-                            {{ paciente.historia_clinica }}
-                        {% else %}
-                            <a href="{% url 'cadastrar_historia_clinica' paciente.id %}" class="btn-novo">Cadastrar História</a>
-                        {% endif %}
-                    </td>
-                    <td>
-                        <a href="{% url 'editar_paciente' paciente.id %}" class="btn-editar">Editar</a>
-                        <a href="{% url 'remover_paciente' paciente.id %}" class="btn-remover" onclick="return confirm('Tem certeza que deseja remover este paciente?')">Remover</a>
+                    <td>{{ paciente.motivo }}</td>
+                    <td>{{ paciente.diagnostico }}</td>
+                    <td>{{ paciente.tratamento }}</td>
+                    <td>{{ paciente.recomendacoes }}</td>
+                    <td class="acao-col" width="210">
+                        <a href="#" class="btn-editar">Editar</a>
+                        <a href="#" class="btn-remover" onclick="return confirm('Tem certeza que deseja remover esta história clínica?')">Remover</a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     {% else %}
-        <p>Nenhum paciente cadastrado.</p>
+        <p>Nenhuma história clínica registrada.</p>
     {% endif %}
 {% endblock %}
