--- a/odontoagil/templates/servicos/cadastrar_servicos.html
+++ b/odontoagil/templates/servicos/cadastrar_servicos.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/serviços/cadastrar_serviços.css' %}">
+<link rel="stylesheet" href="{% static 'css/servicos/cadastrar_servicos.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="campo-formulario">
-                    <label for="codigo_servicos">Codigo de Serviços:</label>
+                    <label for="codigo_servicos">Codigo de Servicos:</label>
                     <input type="text" name="codigo_servicos" id="codigo_servicos" class="input" required>
                 </div>
             </div>
@@ -34,20 +34,20 @@
                 </div>
 
                 <div class="campo-formulario">
-                    <label for="descricao_servicos">descriçao_serviços:</label>
+                    <label for="descricao_servicos">descricao_servicos:</label>
                     <input type="text" name="descricao_servicos" id="idade" class="input" required>
                 </div>
             </div>
 
                 <div class="campo-formulario">
-                    <label for="codigo_servicos_secundarios">Codigo serviços secundarios:</label>
+                    <label for="codigo_servicos_secundarios">Codigo servicos secundarios:</label>
                     <input type="text"  name="codigo_servicos_secundarios" id="codigos_servicos_secundarios" class="input" required>
                 </div>
             </div>
 
             <div class="campo-formulario">
                 <div class="campo-formulario">
-                    <label for="descricao_servicos_secundarios">descriçao serviços secundarios:</label>
+                    <label for="descricao_servicos_secundarios">descricao serviços secundarios:</label>
                     <input type="text" name="descricao_servicos_secundarios" id="descricao_servicos_secundarios" class="input" required>
                 </div>
             </div>
@@ -67,6 +67,6 @@
 
         
 
-        <button type="submit" class="btn-enviar">Cadastrar Serviços</button>
+        <button type="submit" class="btn-enviar">Cadastrar Servicos</button>
     </form>
 {% endblock %}
