--- a/odontoagil/templates/servicos/detalhes_servicos.html
+++ b/odontoagil/templates/servicos/detalhes_servicos.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/serviços/detalhes_serviços.css' %}">
+<link rel="stylesheet" href="{% static 'css/servicos/detalhes_servicos.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -12,9 +12,9 @@
     <p><strong>Data Inclusao:</strong> {{ servicos.data_inclusao }}</p>
     <p><strong>Codigo Servico:</strong> {{ servicos.codigo_servico }}</p>
     <p><strong>Material Usado:</strong> {{ servicos.material_usado }}</p>
-    <p><strong>Descriçao Servico:</strong> {{ servicos.descricao_servicos }}</p>
+    <p><strong>Descricao Servico:</strong> {{ servicos.descricao_servicos }}</p>
     <p><strong>Codigo Servico Secundario:</strong> {{ servicos.codigo_servico_secundario }}</p>
-    <p><strong>Descriçao Servico Secundario:</strong> {{ servicos.descricao_servicos_secundario }}</p>
+    <p><strong>Descricao Servico Secundario:</strong> {{ servicos.descricao_servicos_secundario }}</p>
     <p><strong>Aparelhos Apoio:</strong> {{ servicos.aparelhos_apoio }}</p>
     <p><strong>Observacoes:</strong> {{ servicos.observacoes }}</p>
 </div>
