Atualização de arquivos

--- a/odontoagil/templates/base.html
+++ b/odontoagil/templates/base.html
@@ -23,6 +23,7 @@
                 <li class="item-historia"><img src="{% static 'img/icons/file.svg' %}" alt="Ícone História Clínica"/><a href="{% url 'historia_clinica' %}">Histórias Clínicas</a></li>
                 <li class="item-tratamento"><img src="{% static 'img/icons/tooth.svg' %}" alt="Ícone Tratamento"/><a href="{% url 'tratamentos' %}">Tratamentos</a></li>
                 <li class="item-procedimento"><img src="{% static 'img/icons/teeth.svg' %}" alt="Ícone Procedimento"/><a href="{% url 'listar_procedimentos' %}">Procedimentos</a></li>
+                <li class="item-servicos"><img src="{% static 'img/icons/teeth.svg' %}" alt="Ícone Servicos"/><a href="{% url 'listar_servicos' %}">Servicos</a></li>
             </ul>
         </nav>
     </header>
