--- a/odontoagil/templates/servicos/cadastrar_servicos.html
+++ b/odontoagil/templates/servicos/cadastrar_servicos.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
 
+            <div class="form-row">
             <div class="campo-formulario">
                 <div class="campo-formulario">
                     <label for="material_usado">Material usado:</label>
@@ -38,7 +39,8 @@
                     <input type="text" name="descricao_servicos" id="idade" class="input" required>
                 </div>
             </div>
-
+            
+            <div class="form-row">
                 <div class="campo-formulario">
                     <label for="codigo_servicos_secundarios">Codigo servicos secundarios:</label>
                     <input type="text"  name="codigo_servicos_secundarios" id="codigos_servicos_secundarios" class="input" required>
