Arrumando detalhes no botões

--- a/odontoagil/static/css/servicos/detalhes_servicos.css
+++ b/odontoagil/static/css/servicos/detalhes_servicos.css
@@ -4,13 +4,13 @@ h2 {
     color: #333;
 }
 
-.detalhes-serviços {
+.detalhes-servicos {
     line-height: 1.8;
     font-size: 1.1em;
     color: #444;
 }
 
-.detalhes-serviços p {
+.detalhes-servicos p {
     margin-bottom: 0.8em;
     border-bottom: 1px solid #eee;
     padding-bottom: 0.5em;
