--- a/odontoagil/templates/servicos/editar_servicos.html
+++ b/odontoagil/templates/servicos/editar_servicos.html
@@ -39,6 +39,7 @@
                 </div>
             </div>
 
+            <div class="form-row">
                 <div class="campo-formulario">
                     <label for="codigo_servicos_secundario">codigo servicos secundarios:</label>
                     <input type="text" name="codigo_servicos_secundarios" id="codigo_servicos_secundarios" class="input" required value="{{ servicos.codigo_servicos_secundarios }}">
