--- a/odontoagil/templates/base.html
+++ b/odontoagil/templates/base.html
@@ -22,7 +22,7 @@
                 <li class="item-paciente"><img src="{% static 'img/icons/pacient.svg' %}" alt="Ícone Paciente"/><a href="{% url 'listar_paciente' %}">Pacientes</a></li>
                 <li class="item-historia"><img src="{% static 'img/icons/file.svg' %}" alt="Ícone História Clínica"/><a href="{% url 'historia_clinica' %}">Histórias Clínicas</a></li>
                 <li class="item-servicos"><img src="{% static 'img/icons/teeth.svg' %}" alt="Ícone Servicos"/><a href="{% url 'listar_servicos' %}">Servicos</a></li>
-                <li class="item-usuarios"><img src="{% static 'img/icons/user.svg' %}" alt="Ícone Usuários"/><a href="{% url 'listar_servicos' %}">Usuários</a></li>
+                <li class="item-usuarios"><img src="{% static 'img/icons/user.svg' %}" alt="Ícone Usuários"/><a href="{% url 'listar_usuarios' %}">Usuários</a></li>
             </ul>
         </nav>
     </header>
