--- a/odontoagil/templates/servicos/editar_servicos.html
+++ b/odontoagil/templates/servicos/editar_servicos.html
@@ -6,68 +6,69 @@
 {% endblock %}
 
 {% block content %}
-    <header class="cabecalho-conteudo">
-        <h1 class="titulo-pagina">Editar Serviços</h1>
-    </header>
+<header class="cabecalho-conteudo">
+    <h1 class="titulo-pagina">Editar Serviço</h1>
+</header>
 
-    <form method="POST">
-        {% csrf_token %}
+<form method="POST">
+    {% csrf_token %}
 
-        <section class="informacoes-pessoais">
-            <h2>Cadastro de Serviços Prestados</h2>
-            <div class="form-row">
-                <div class="campo-formulario">
-                    <label for="data_inclusao_servicos">Data Inclusao Servicos:</label>
-                    <input type="date" name="data_inclusao" id="data_inclusao" class="input" required value="{{ servicos.data_inclusao_servicos }}">
-                </div>
+    <section class="informacoes-pessoais">
+        <h2>Cadastro de Serviços Prestados</h2>
 
-                <div class="campo-formulario">
-                    <label for="codigo_servicos">Codido de Servicos:</label>
-                    <input type="text" name="codigo_servicos" id="codigo_servicos" class="input" required value="{{ servicos.codigo_servicos }}">
-                </div>
+        <div class="form-row">
+            <div class="campo-formulario">
+                <label for="data_inclusao">Data de Inclusão:</label>
+                <input type="date" name="data_inclusao" id="data_inclusao" class="input" required value="{{ servicos.data_inclusao }}">
             </div>
 
-            <div class="form-row">
-                <div class="campo-formulario">
-                    <label for="material_usado">Material Usado:</label>
-                    <input type="text" name="material_usado" id="material_usado" class="input" required value="{{ servicos.material_usado }}">
-                </div>
+            <div class="campo-formulario">
+                <label for="codigo_servicos">Código de Serviços:</label>
+                <input type="text" name="codigo_servicos" id="codigo_servicos" class="input" required value="{{ servicos.codigo_servicos }}">
+            </div>
+        </div>
 
-                <div class="campo-formulario">
-                    <label for="descricao_serviços">Descrição_serviços:</label>
-                    <input type="text" name="desccricao_servicos" id="descriçao_servicos" class="input" required value="{{ servicos.descricao_servicos }}">
-                </div>
+        <div class="form-row">
+            <div class="campo-formulario">
+                <label for="material_usado">Material Usado:</label>
+                <input type="text" name="material_usado" id="material_usado" class="input" required value="{{ servicos.material_usado }}">
             </div>
 
-            <div class="form-row">
-                <div class="campo-formulario">
-                    <label for="codigo_servicos_secundario">codigo servicos secundarios:</label>
-                    <input type="text" name="codigo_servicos_secundarios" id="codigo_servicos_secundarios" class="input" required value="{{ servicos.codigo_servicos_secundarios }}">
-                </div>
+            <div class="campo-formulario">
+                <label for="descricao_servicos">Descrição dos Serviços:</label>
+                <input type="text" name="descricao_servicos" id="descricao_servicos" class="input" required value="{{ servicos.descricao_servicos }}">
             </div>
+        </div>
 
-            <div class="form-row">
-                <div class="descricao_servicos_secundario">
-                    <label for="descricao_servicos_secundario">descriçao_serviços_secundario:</label>
-                    <input type="text" name="descricao_servicos_secundario" id="descricao_servicos_secundario" class="input" required value="{{ servicos.descricao_servicos_secundario }}">
-                </div>
+        <div class="form-row">
+            <div class="campo-formulario">
+                <label for="codigo_servicos_secundario">Código dos Serviços Secundários:</label>
+                <input type="text" name="codigo_servicos_secundario" id="codigo_servicos_secundario" class="input" required value="{{ servicos.codigo_servicos_secundario }}">
             </div>
-            <div class="form-row">
-                <div class="aparelhos_apoio">
-                    <label for="aparelhos_apoio">aparelhos_apoio:</label>
-                    <input type="text" name="aparelhos_apoio" id="aparelhos_apoio" class="input" required value="{{ servicos.aparelhos_apoio }}">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="observacoes">
-                    <label for="observacoes">observacoes:</label>
-                    <input type="text" name="observacoes" id="observacoes" class="input" required value="{{ servicos.observacoes }}">
-                </div>
-            </div>
-        </section>
+        </div>
 
-    
+        <div class="form-row">
+            <div class="campo-formulario">
+                <label for="descricao_servicos_secundario">Descrição dos Serviços Secundários:</label>
+                <input type="text" name="descricao_servicos_secundario" id="descricao_servicos_secundario" class="input" required value="{{ servicos.descricao_servicos_secundario }}">
+            </div>
+        </div>
 
-        <button type="submit" class="btn-enviar">Salvar Alteracoes</button>
-    </form>
+        <div class="form-row">
+            <div class="campo-formulario">
+                <label for="aparelho_apoio">Aparelho de Apoio:</label>
+                <input type="text" name="aparelho_apoio" id="aparelho_apoio" class="input" required value="{{ servicos.aparelho_apoio }}">
+            </div>
+        </div>
+
+        <div class="form-row">
+            <div class="campo-formulario">
+                <label for="observacoes">Observações:</label>
+                <input type="text" name="observacoes" id="observacoes" class="input" required value="{{ servicos.observacoes }}">
+            </div>
+        </div>
+    </section>
+
+    <button type="submit" class="btn-enviar">Salvar Alterações</button>
+</form>
 {% endblock %}
