--- a/odontoagil/templates/servicos/editar_servicos.html
+++ b/odontoagil/templates/servicos/editar_servicos.html
@@ -69,6 +69,9 @@
         </div>
     </section>
 
-    <button type="submit" class="btn-enviar">Salvar Alterações</button>
+    <div class="botoes-form">
+        <button type="submit" class="btn-enviar">Salvar Alterações</button>
+        <a href="javascript:history.back()" class="btn-voltar">Voltar</a>
+    </div>
 </form>
 {% endblock %}
